--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Ccircle cx='50' cy='50' r='45' fill='%231e293b'/%3E%3Cellipse cx='35' cy='35' rx='12' ry='8' fill='white' fill-opacity='0.3' transform='rotate(-30 35 35)'/%3E%3Ccircle cx='30' cy='30' r='4' fill='white' fill-opacity='0.5'/%3E%3C/svg%3E" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
 
     <!-- Primary Meta Tags -->
     <title>Snooker Club Manager - Professional Table & Session Management</title>
